2011-05-02  Gabor Loki  <loki@webkit.org>

        Buildfix for ARM after r85448

        * assembler/ARMAssembler.h:
        (JSC::ARMAssembler::loadBranchTarget):

2011-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Strict-mode only reserved words not reserved
        https://bugs.webkit.org/show_bug.cgi?id=55342

        Fix line number tracking when we rollback the lexer.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseSourceElements):

2011-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        ES5 Strict mode does not allow getter and setter for same propId
        https://bugs.webkit.org/show_bug.cgi?id=57295

        Simplify and correct the logic for strict mode object literals.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseStrictObjectLiteral):

2011-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Assigning to function identifier under strict should throw
        https://bugs.webkit.org/show_bug.cgi?id=59289

        Add logic to StaticScopeObject to ensure we don't silently consume
        writes to constant properties.

        * runtime/JSStaticScopeObject.cpp:
        (JSC::JSStaticScopeObject::put):

2011-05-01  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=59903
        Use AssemblerLabel throughout Assembler classes, AssemblerBuffer

        Creating a lable() into the AssemblerBuffer should return an AssemblerLabel,
        not an unsigned int.

        * assembler/ARMAssembler.cpp:
        (JSC::ARMAssembler::executableCopy):
        * assembler/ARMAssembler.h:
        (JSC::ARMAssembler::blx):
        (JSC::ARMAssembler::label):
        (JSC::ARMAssembler::loadBranchTarget):
        * assembler/ARMv7Assembler.h:
        (JSC::ARMv7Assembler::b):
        (JSC::ARMv7Assembler::blx):
        (JSC::ARMv7Assembler::bx):