@@ -1,3 +1,14 @@
+2011-05-02  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Alexey Proskuryakov.
+
+        StringImpl::endsWith has some insane code
+        https://bugs.webkit.org/show_bug.cgi?id=59900
+
+        * wtf/text/StringImpl.cpp:
+        (WTF::StringImpl::endsWith):
+            - m_data shadows a member variable of the same name.
+
 2011-05-02  Gabor Loki  <loki@webkit.org>
 
         Buildfix for ARM after r85448
